--- a/src/IAmBacon/IAmBacon/404.html
+++ b/src/IAmBacon/IAmBacon/404.html
@@ -1,9 +1,4 @@
-﻿@model IAmBacon.ViewModels.ErrorViewModel
-@{
-    Layout = null;
-}
-<!DOCTYPE html>
-
+﻿<!DOCTYPE html>
 <html>
 <head>
     <meta name="viewport" content="width=device-width" />
