Pinterest file rename

--- a/src/IAmBacon/IAmBacon/pinterest-78f13.html
+++ b/src/IAmBacon/IAmBacon/pinterest-78f13.html
@@ -4,7 +4,7 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <meta name="p:domain_verify" content="107075a2894c7da7e310216bf97e16c3" />
+    <meta name="p:domain_verify" content="78f1380dcad55e753211b9c15d503d99" />
     <title></title>
 
 </head>
@@ -28,7 +28,7 @@
                                     <h1 style="font-family:georgia,serif;font-weight:normal;font-size:22px;line-height:21px;color:#211922 !important;text-shadow:0 1px 0 #FFFFFF;margin:0;padding:0 20px;">
 
 
-                                                Hi, colin!
+                                                Hi, Colin!
 
 
                                     </h1>
@@ -57,8 +57,8 @@
 
 
     <td class="profile_image" width="80" valign="top">
-        <a href="https://www.pinterest.com/website/verify/" title="colin bacon">
-            <img src="http://passets-ak.pinterest.com/images/user/default_140.png" width="80" height="80" style="vertical-align:top;outline:none;border:none;" alt="colin bacon" />
+        <a href="https://www.pinterest.com/website/verify/" title="Colin Bacon">
+            <img src="http://media-cache-ak0.pinimg.com/avatars/colinbacon_1330504852_140.jpg" width="80" height="80" style="vertical-align:top;outline:none;border:none;" alt="Colin Bacon" />
         </a>
     </td>
 
